Add ``AudioSrv`` to automatic services due to naming inconsistencies between W7 and W10

--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -1,8 +1,10 @@
 [Automatic_Services]
 AudioEndpointBuilder
+AudioSrv
 Audiosrv
 BrokerInfrastructure
 CoreMessagingRegistrar
+NVDisplay.ContainerLocalSystem
 DcomLaunch
 gpsvc
 Power
@@ -14,6 +16,7 @@ LSM
 UserManager
 CryptSvc
 Winmgmt
+PlugPlay
 
 [Manual_Services]
 TrustedInstaller
