Update service list configuration file

--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -1,5 +1,6 @@
 [Automatic_Services]
 AudioEndpointBuilder
+; repeated audiosrv service names is intentional due to naming inconsistencies between windows versions
 AudioSrv
 Audiosrv
 BrokerInfrastructure
@@ -10,24 +11,111 @@ gpsvc
 Power
 RpcEptMapper
 RpcSs
+; nsi is required for some games such as apex legends, cold war & valorant
+nsi
 sppsvc
 ProfSvc
 LSM
 UserManager
-CryptSvc
-Winmgmt
-PlugPlay
 
 [Manual_Services]
+PlugPlay
+CryptSvc
+Winmgmt
 TrustedInstaller
 AppXSvc
 StateRepository
+; camsvc is only required on windows 10 1803 & higher
 camsvc
+vds
+msiserver
 
 [Drivers_To_Disable]
-
+lltdio
+luafv
+PEAUTH
+rspndr
+secdrv
+tcpipreg
+CLFS
+fvevol
+KSecPkg
+; pcw required for task manager functionality
+pcw
+rdyboost
+storflt
+AsyncMac
+bowser
+Beep
+blbdrive
+DfsC
+mpsdrv
+mrxsmb
+mrxsmb10
+mrxsmb20
+NetBIOS
+NetBT
+rdbss
+srv
+srv2
+srvnet
+swenum
+tdx
+tunnel
+VgaSave
+Wanarpv6
+WmiAcpi
+discache
+RDPCDD
+RDPENCDD
+RDPREFMP
+bindflt
+CldFlt
+MMCSS
+MsLldp
+Ndu
+storqosflt
+wanarp
+wcifs
+iorate
+MsSecFlt
+SgrmAgent
+spaceport
+Telemetry
+WdFilter
+WindowsTrustedRT
+WindowsTrustedRTProxy
+amdgpio2
+GPIOClx0101
+kdnic
+UEFI
+afunix
+ahcache
+bam
+cdrom
+CimFS
+FileCrypt
+GpuEnergyDrv
+NdisCap
+npsvctrig
+Vid
+EhStorClass
+vwififlt
+WdBoot
+CompositeBus
+NdisVirtualBus
+rdpbus
+umbus
+vdrvroot
+MSKSSRV
+MSTEE
+NdisWan
+PptpMiniport
+RasAgileVpn
+Rasl2tp
+RasPppoe
+RasSstp
 
 [Toggle_Files_Folders]
-C:\Windows\System32\drivers\vga.sys
 C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
