Add support for windows 8.1

--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -25,7 +25,7 @@ Winmgmt
 TrustedInstaller
 AppXSvc
 StateRepository
-; camsvc is only required on windows 10 1803 & higher
+; camsvc is only required on windows 10 1803+
 camsvc
 vds
 msiserver
