Remove winmgmt, saves us from configuring wmi autologgers

--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -1,34 +1,35 @@
 [Automatic_Services]
 AudioEndpointBuilder
-; repeated audiosrv service names is intentional due to naming inconsistencies between windows versions
 AudioSrv
 Audiosrv
 BrokerInfrastructure
 CoreMessagingRegistrar
-NVDisplay.ContainerLocalSystem
 DcomLaunch
 gpsvc
 Power
 RpcEptMapper
 RpcSs
-; nsi is required for some games such as apex legends, cold war & valorant
-nsi
 sppsvc
 ProfSvc
 LSM
 UserManager
+; nsi can be removed if your game does not require it to run (apex legends, cold war & valorant require it)
+nsi
+; NVDisplay.ContainerLocalSystem can be removed as it wastes cpu time, will not be able to access the nvidia
+; control panel with services disabled which is not a big deal
+NVDisplay.ContainerLocalSystem
 
 [Manual_Services]
-PlugPlay
 CryptSvc
-Winmgmt
 TrustedInstaller
 AppXSvc
 StateRepository
-; camsvc is only required on windows 10 1803+
-camsvc
 vds
 msiserver
+; plugplay is can be removed on windows windows 8+
+PlugPlay
+; camsvc can be removed on windows 10 1709 and lower
+camsvc
 
 [Drivers_To_Disable]
 lltdio
@@ -40,8 +41,6 @@ tcpipreg
 CLFS
 fvevol
 KSecPkg
-; pcw required for task manager functionality
-pcw
 rdyboost
 storflt
 AsyncMac
@@ -115,6 +114,8 @@ RasAgileVpn
 Rasl2tp
 RasPppoe
 RasSstp
+; pcw required for task manager functionality
+pcw
 
 [Toggle_Files_Folders]
 C:\Windows\System32\RuntimeBroker.exe
