Remove repeated "windows"

--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -26,7 +26,7 @@ AppXSvc
 StateRepository
 vds
 msiserver
-; plugplay is can be removed on windows windows 8+
+; plugplay is can be removed on windows 8+
 PlugPlay
 ; camsvc can be removed on windows 10 1709 and lower
 camsvc
