Remove vds, add winmgmt to services configuration with disclaimer

--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -15,17 +15,20 @@ LSM
 UserManager
 ; nsi can be removed if your game does not require it to run (apex legends, cold war & valorant require it)
 nsi
-; NVDisplay.ContainerLocalSystem can be removed as it wastes cpu time, will not be able to access the nvidia
+; nvdisplay.containerlocalsystem can be removed as it wastes cpu time, will not be able to access the nvidia
 ; control panel with services disabled which is not a big deal
 NVDisplay.ContainerLocalSystem
 
 [Manual_Services]
 CryptSvc
 TrustedInstaller
+msiserver
+; appxsvc and staterepository can be removed on windows 10 1709 and lower, disabling these two services may cause
+; the audio service to bug out with high cpu usage on some systems
 AppXSvc
 StateRepository
-vds
-msiserver
+; winmgmt can be removed as it wastes cpu time but major elements of the ui and os functionality will be broken
+Winmgmt
 ; plugplay can be removed on windows 8+
 PlugPlay
 ; camsvc can be removed on windows 10 1709 and lower
