--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -119,6 +119,8 @@ RasPppoe
 RasSstp
 ; pcw required for task manager functionality
 pcw
+; volsnap can be disabled on windows 10+, have not tested windows 8
+; volsnap
 
 [Toggle_Files_Folders]
 C:\Windows\System32\RuntimeBroker.exe
