Add vga.sys and basicdisplay to driver list (excluded by default)

--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -117,6 +117,8 @@ RasAgileVpn
 Rasl2tp
 RasPppoe
 RasSstp
+; basicdisplay can be disabled on windows 7 however safe mode will not function, this driver serves the same purpose as basicdisplay
+; BasicDisplay
 ; pcw required for task manager functionality
 pcw
 ; volsnap can be disabled on windows 10+, have not tested windows 8
@@ -125,3 +127,5 @@ pcw
 [Toggle_Files_Folders]
 C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
+; vga.sys can be disabled on windows 7 however safe mode will not function, this driver serves the same purpose as basicdisplay
+; C:\Windows\System32\drivers\vga.sys
