Update basic display service info

--- a/prerequisites/bare_services.ini
+++ b/prerequisites/bare_services.ini
@@ -117,7 +117,7 @@ RasAgileVpn
 Rasl2tp
 RasPppoe
 RasSstp
-; basicdisplay can be disabled on windows 7 however safe mode will not function, this driver serves the same purpose as basicdisplay
+; basicdisplay can be disabled however safe mode will not function, this driver serves the same purpose as vga.sys
 ; BasicDisplay
 ; pcw required for task manager functionality
 pcw
@@ -127,5 +127,5 @@ pcw
 [Toggle_Files_Folders]
 C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
-; vga.sys can be disabled on windows 7 however safe mode will not function, this driver serves the same purpose as basicdisplay
+; vga.sys can be disabled however safe mode will not function, this driver serves the same purpose as basicdisplay
 ; C:\Windows\System32\drivers\vga.sys
