--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -20,15 +20,14 @@ nsi
 NVDisplay.ContainerLocalSystem
 
 [Manual_Services]
+Winmgmt
 CryptSvc
 TrustedInstaller
 msiserver
-; appxsvc and staterepository can be removed on windows 10 1709 and lower, disabling these two services may cause
-; the audio service to bug out with high cpu usage on some systems
+; appxsvc and staterepository can be removed if not configuring Windows 10 1803, may result in audio services bugging out and using 100% cpu, beware
 AppXSvc
 StateRepository
-; winmgmt can be removed as it wastes cpu time but major elements of the ui and os functionality will be broken
-Winmgmt
+
 ; plugplay can be removed on windows 8+
 PlugPlay
 ; camsvc can be removed on windows 10 1709 and lower
@@ -103,6 +102,7 @@ npsvctrig
 Vid
 EhStorClass
 vwififlt
+pcw
 WdBoot
 CompositeBus
 NdisVirtualBus
@@ -117,14 +117,21 @@ RasAgileVpn
 Rasl2tp
 RasPppoe
 RasSstp
-; basicdisplay can be disabled however safe mode will not function, this driver serves the same purpose as vga.sys
+Wof
+; mssmbios can be uncommented, breaks games such as GTA
+; mssmbios
+
+; basicdisplay can be uncommented however safe mode will not function, this driver serves the same purpose as vga.sys
 ; BasicDisplay
-pcw
-; volsnap can be disabled on windows 10+, have not tested windows 8
+
+; volsnap can be uncommented on windows 10+, have not tested windows 8
 ; volsnap
+
+; volmgrx can be uncommented, breaks dynamic volumes and raid storage configurations
+; volmgrx
 
 [Toggle_Files_Folders]
 C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
-; vga.sys can be disabled however safe mode will not function, this driver serves the same purpose as basicdisplay
+; vga.sys can be uncommented however safe mode will not function, this driver serves the same purpose as basicdisplay
 ; C:\Windows\System32\drivers\vga.sys
