Add msisadrv, psched to services config file, formatting changes

--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -62,7 +62,6 @@ srvnet
 swenum
 tdx
 tunnel
-VgaSave
 Wanarpv6
 WmiAcpi
 discache
@@ -120,8 +119,9 @@ Wof
 ; mssmbios can be uncommented, breaks games such as GTA
 ; mssmbios
 
-; basicdisplay can be uncommented however safe mode will not function, this driver serves the same purpose as vga.sys
+; basic video adapter that ships with windows, can be uncommented but safemode will no longer work (must have gpu drivers installed while these are disabled)
 ; BasicDisplay
+; VgaSave
 
 ; volsnap can be uncommented on windows 10+, have not tested windows 8
 ; volsnap
@@ -129,8 +129,14 @@ Wof
 ; volmgrx can be uncommented, breaks dynamic volumes and raid storage configurations
 ; volmgrx
 
+; msisadrv can be uncommented, breaks keyboards on laptops/desktop for some people, beware
+; msisadrv
+
+; Psched can be uncommented if not using QoS or it is not enabled in the network adapter, breaks QoS policies
+; Psched
+
 [Toggle_Files_Folders]
 C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
-; vga.sys can be uncommented however safe mode will not function, this driver serves the same purpose as basicdisplay
+; vga.sys can be uncommented but safemode will no longer work (must have gpu drivers installed while this is disabled)
 ; C:\Windows\System32\drivers\vga.sys
