--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -15,7 +15,7 @@ LSM
 UserManager
 ; nsi can be removed if your game does not require it to run (apex legends, cold war & valorant require it)
 nsi
-; nvdisplay.containerlocalsystem can be removed as it wastes cpu time, will not be able to access the nvidia
+; nvdisplay.containerlocalsystem can be removed as it wastes cpu cycles, will not be able to access the nvidia
 ; control panel with services disabled which is not a big deal
 NVDisplay.ContainerLocalSystem
 
