Install Xbox Game Bar for FSE in games

--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -139,5 +139,12 @@ Wof
 [Toggle_Files_Folders]
 C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
+C:\Program Files\WindowsApps\Microsoft.UI.Xaml.2.7_7.2208.15002.0_x64__8wekyb3d8bbwe
+C:\Program Files\WindowsApps\Microsoft.VCLibs.140.00.UWPDesktop_14.0.30704.0_x64__8wekyb3d8bbwe
+C:\Program Files\WindowsApps\Microsoft.VCLibs.140.00_14.0.30704.0_x64__8wekyb3d8bbwe
+C:\Program Files\WindowsApps\Microsoft.XboxGamingOverlay_5.822.9161.0_neutral_split.scale-100_8wekyb3d8bbwe
+C:\Program Files\WindowsApps\Microsoft.XboxGamingOverlay_5.822.9161.0_neutral_~_8wekyb3d8bbwe
+C:\Program Files\WindowsApps\Microsoft.XboxGamingOverlay_5.822.9161.0_x64__8wekyb3d8bbwe
+
 ; vga.sys can be uncommented but safemode will no longer work (must have gpu drivers installed while this is disabled)
 ; C:\Windows\System32\drivers\vga.sys
