--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -13,9 +13,13 @@ sppsvc
 ProfSvc
 LSM
 UserManager
-; nsi can be removed if your game does not require it to run (apex legends, cold war & valorant require it)
+TextInputManagementService
+
+; do not uncomment if configuring windows 11
+; nsi can be uncommented on windows 10 and lower if your game (apex legends, cold war, valorant) does not require it to run
 nsi
-; nvdisplay.containerlocalsystem can be removed as it wastes cpu cycles, will not be able to access the nvidia
+
+; nvdisplay.containerlocalsystem can be uncommented as it wastes cpu cycles, will not be able to access the nvidia
 ; control panel with services disabled which is not a big deal
 NVDisplay.ContainerLocalSystem
 
@@ -24,12 +28,19 @@ Winmgmt
 CryptSvc
 TrustedInstaller
 msiserver
-; appxsvc and staterepository can be removed if not configuring Windows 10 1803, may result in audio services bugging out and using 100% cpu, beware
+
+; can be commented out on windows 10 and lower
+netprofm
+
+; do not uncomment if configuring windows 11
+; if uncommented on windows 10 1803, you may encounter the audio services bugging out and using 100% cpu
 AppXSvc
 StateRepository
-; plugplay can be removed on windows 8+
+
+; plugplay can be uncommented on windows 8+
 PlugPlay
-; camsvc can be removed on windows 10 1709 and lower
+
+; camsvc can be uncommented on windows 10 1709 and lower
 camsvc
 
 [Drivers_To_Disable]
