--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -14,34 +14,19 @@ ProfSvc
 LSM
 UserManager
 TextInputManagementService
-
-; do not uncomment if configuring windows 11
-; nsi can be uncommented on windows 10 and lower if your game (apex legends, cold war, valorant) does not require it to run
-nsi
-
-; nvdisplay.containerlocalsystem can be uncommented as it wastes cpu cycles, will not be able to access the nvidia
-; control panel with services disabled which is not a big deal
-NVDisplay.ContainerLocalSystem
+NVDisplay.ContainerLocalSystem ; remove if you do not need access to nvcp often
+nsi ; do not remove if configuring windows 11. remove on windows 10 and lower if your game (apex legends, cold war, valorant) does not require it to run
 
 [Manual_Services]
-Winmgmt
 CryptSvc
 TrustedInstaller
 msiserver
-
-; can be commented out on windows 10 and lower
-netprofm
-
-; do not uncomment if configuring windows 11
-; if uncommented on windows 10 1803, you may encounter the audio services bugging out and using 100% cpu
-AppXSvc
-StateRepository
-
-; plugplay can be uncommented on windows 8+
-PlugPlay
-
-; camsvc can be uncommented on windows 10 1709 and lower
-camsvc
+Winmgmt ; can be removed, major dependency for several applications  
+netprofm ; remove on windows 10 and lower
+PlugPlay ; remove on windows 8+
+camsvc ; remove on windows 10 1709 and lower
+AppXSvc ; do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
+StateRepository ; do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
 
 [Drivers_To_Disable]
 acpipagr
@@ -128,23 +113,27 @@ Rasl2tp
 RasPppoe
 RasSstp
 Wof
-; mssmbios can be uncommented, breaks games such as GTA
-; mssmbios
+bfs
+IntelPMT
+PRM
 
-; basic video adapter that ships with windows, can be uncommented but safemode will no longer work (must have gpu drivers installed while these are disabled)
+; can be uncommented, safemode will no longer function. gpu drivers must be installed while these are disabled
 ; BasicDisplay
 ; VgaSave
 
-; volsnap can be uncommented on windows 10+, have not tested windows 8
+; can be uncommented, breaks games such as gta
+; mssmbios
+
+; can be uncommented on windows 10+, have not tested windows 8
 ; volsnap
 
-; volmgrx can be uncommented, breaks dynamic volumes and raid storage configurations
+; can be uncommented, breaks dynamic volumes and raid storage configurations
 ; volmgrx
 
-; msisadrv can be uncommented, breaks keyboards on laptops/desktop for some people, beware
+; can be uncommented, breaks keyboards on laptops/desktop for some people
 ; msisadrv
 
-; Psched can be uncommented if not using QoS or it is not enabled in the network adapter, breaks QoS policies
+; can be uncommented, breaks QoS policies
 ; Psched
 
 [Toggle_Files_Folders]
@@ -152,5 +141,5 @@ C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
 C:\Program Files\WindowsApps\Microsoft.XboxGamingOverlay_5.822.9161.0_x64__8wekyb3d8bbwe
 
-; vga.sys can be uncommented but safemode will no longer work (must have gpu drivers installed while this is disabled)
+; can be uncommented, safemode will no longer function. gpu drivers must be installed while these are disabled
 ; C:\Windows\System32\drivers\vga.sys
