Volsnap is required on Windows 8

--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -124,7 +124,7 @@ PRM
 ; can be uncommented, breaks games such as gta
 ; mssmbios
 
-; can be uncommented on windows 10+, have not tested windows 8
+; can be uncommented on windows 10+
 ; volsnap
 
 ; can be uncommented, breaks dynamic volumes and raid storage configurations
