Switch inline comments to #

--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -14,19 +14,19 @@ ProfSvc
 LSM
 UserManager
 TextInputManagementService
-NVDisplay.ContainerLocalSystem ; remove if you do not need access to nvcp often
-nsi ; do not remove if configuring windows 11. remove on windows 10 and lower if your game (apex legends, cold war, valorant) does not require it to run
+NVDisplay.ContainerLocalSystem # remove if you do not need access to nvcp often
+nsi # do not remove if configuring windows 11. remove on windows 10 and lower if your game (apex legends, cold war, valorant) does not require it to run
 
 [Manual_Services]
 CryptSvc
 TrustedInstaller
 msiserver
-Winmgmt ; can be removed, major dependency for several applications  
-netprofm ; remove on windows 10 and lower
-PlugPlay ; remove on windows 8+
-camsvc ; remove on windows 10 1709 and lower
-AppXSvc ; do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
-StateRepository ; do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
+Winmgmt # can be removed, major dependency for several applications  
+netprofm # remove on windows 10 and lower
+PlugPlay # remove on windows 8+
+camsvc # remove on windows 10 1709 and lower
+AppXSvc # do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
+StateRepository # do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
 
 [Drivers_To_Disable]
 acpipagr
@@ -117,29 +117,29 @@ bfs
 IntelPMT
 PRM
 
-; can be uncommented, safemode will no longer function. gpu drivers must be installed while these are disabled
-; BasicDisplay
-; VgaSave
+# can be uncommented, safemode will no longer function. gpu drivers must be installed while these are disabled
+# BasicDisplay
+# VgaSave
 
-; can be uncommented, breaks games such as gta
-; mssmbios
+# can be uncommented, breaks games such as gta
+# mssmbios
 
-; can be uncommented on windows 10+
-; volsnap
+# can be uncommented on windows 10+
+# volsnap
 
-; can be uncommented, breaks dynamic volumes and raid storage configurations
-; volmgrx
+# can be uncommented, breaks dynamic volumes and raid storage configurations
+# volmgrx
 
-; can be uncommented, breaks keyboards on laptops/desktop for some people
-; msisadrv
+# can be uncommented, breaks keyboards on laptops/desktop for some people
+# msisadrv
 
-; can be uncommented, breaks QoS policies
-; Psched
+# can be uncommented, breaks QoS policies
+# Psched
 
 [Toggle_Files_Folders]
 C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
 C:\Program Files\WindowsApps\Microsoft.XboxGamingOverlay_5.822.9161.0_x64__8wekyb3d8bbwe
 
-; can be uncommented, safemode will no longer function. gpu drivers must be installed while these are disabled
-; C:\Windows\System32\drivers\vga.sys
+# can be uncommented, safemode will no longer function. gpu drivers must be installed while these are disabled
+# C:\Windows\System32\drivers\vga.sys
