--- a/prerequisites/bare-services.ini
+++ b/prerequisites/bare-services.ini
@@ -14,7 +14,7 @@ ProfSvc
 LSM
 UserManager
 TextInputManagementService
-NVDisplay.ContainerLocalSystem # remove if you do not need access to nvcp often
+NVDisplay.ContainerLocalSystem # remove if you do not need access to nvidia control panel often
 nsi # do not remove if configuring windows 11. remove on windows 10 and lower if your game (apex legends, cold war, valorant) does not require it to run
 
 [Manual_Services]
@@ -130,7 +130,7 @@ PRM
 # can be uncommented, breaks dynamic volumes and raid storage configurations
 # volmgrx
 
-# can be uncommented, breaks keyboards on laptops/desktop for some people
+# can be uncommented, breaks keyboards on laptops/desktops for some people
 # msisadrv
 
 # can be uncommented, breaks QoS policies
@@ -141,5 +141,5 @@ C:\Windows\System32\RuntimeBroker.exe
 C:\Windows\SystemApps\ShellExperienceHost_cw5n1h2txyewy
 C:\Program Files\WindowsApps\Microsoft.XboxGamingOverlay_5.822.9161.0_x64__8wekyb3d8bbwe
 
-# can be uncommented, safemode will no longer function. gpu drivers must be installed while these are disabled
+# can be uncommented, safemode will no longer function. gpu drivers must be installed while vga.sys is disabled
 # C:\Windows\System32\drivers\vga.sys
