appxsvc can be disabled on windows 11

--- a/bin/bare-services.ini
+++ b/bin/bare-services.ini
@@ -25,7 +25,7 @@ Winmgmt # can be removed, major dependency for several applications
 netprofm # remove on windows 10 and lower
 PlugPlay # remove on windows 8+
 camsvc # remove on windows 10 1709 and lower
-AppXSvc # do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
+AppXSvc # audio services use 100% cpu if removed on windows 10 1803
 StateRepository # do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
 
 [Drivers_To_Disable]
