seclogon is required for frameview

--- a/bin/bare-services.ini
+++ b/bin/bare-services.ini
@@ -27,6 +27,7 @@ PlugPlay # remove on windows 8+
 camsvc # remove on windows 10 1709 and lower
 AppXSvc # audio services use 100% cpu if removed on windows 10 1803
 StateRepository # do not remove if configuring windows 11. audio services use 100% cpu if removed on windows 10 1803
+seclogon # required for frameview
 
 [Drivers_To_Disable]
 acpipagr
